# server/api/services/babychain/babychain.service.js
@@ -1,0 +1,44 @@
+import l from '../../../common/logger';
+
+const fbClient = require('../../../blockchain/bc-client');
+
+class BabyChainService {
+  getBaby(req, res) {
+    l.info('getbaby test');
+    const args = [];
+
+    args.push(req.params.key);
+    return Promise.resolve(fbClient.queryChaincode('babychain', 'query', args, []));
+  }
+
+  register(req, res) {
+    l.info('register test');
+    l.info(`${this.constructor.name}.byId(${req})`);
+    const args = [];
+
+    args.push(req.body.key);
+    args.push(req.body.value);
+
+    return Promise.resolve(fbClient.invokeChaincode('babychain', 'register', args, []));
+  }
+
+  modify(req, res) {
+    l.info('modify test');
+    l.info(`${this.constructor.name}.byId(${req})`);
+    const args = [];
+
+    args.push(req.body.key);
+    args.push(req.body.value);
+
+    return Promise.resolve(fbClient.invokeChaincode('babychain', 'modify', args, []));
+  }
+
+  delete(req, res) {
+    l.info('delete test');
+    const args = [];
+    args.push(req.params.key);
+    return Promise.resolve(fbClient.invokeChaincode('babychain', 'delete', args, []));
+  }
+}
+
+export default new BabyChainService();
